Fix overflow-x issue

--- a/chaplin-mod.css
+++ b/chaplin-mod.css
@@ -616,23 +616,23 @@ body:not(.home) .intro-text,
 
 
 /*NEW LAYOUT TEST*/
+.home #site-content {
+    overflow-x: hidden;
+    margin-top: -140px;
+}
+
 .home .entry-header {
     display: none;
 }
 
 .home .entry-content {
   max-width: initial;
-	margin-top: -60px;
-}
-
-.home .post-inner {
-    padding-top: 0;
 }
 
 .hero-intro {
   font-size: 4rem;
   font-weight: 800;
-  margin-left: 20px;
+  margin-left: 8px;
 }
 
 .hero-col {
@@ -828,9 +828,9 @@ body:not(.home) .intro-text,
 }
 
 @media screen and (max-width: 700px) {
-    .home .entry-content {
-        margin-top: -20px;
-    }
+  .home #site-content {
+      margin-top: -60px;
+  }
 }
 
 @media screen and (max-width: 550px) {
